<resources>
    <string name="app_name">LibDumper</string>
    <string name="package_name">Package Name</string>
    <string name="armeabi_v7a">armeabi-v7a</string>
    <string name="arm64_v8a">arm64-v8a</string>
    <string name="dump_lib_ue4">Dump Lib UE4</string>
    <string name="dump_lib_il2cpp">Dump Lib IL2cpp</string>
    <string name="select_your_dumper">Select Your Dumper</string>
    <string name="root_grant_root_permission_n_non_root_use_virtual_space_app">* Root : Grant Root Permission\n* Non Root : Use Virtual Space App</string>
    <string name="root">ROOT</string>
    <string name="non_root">NON ROOT</string>
    <string name="go_to_github_repository">Go To Github Repository</string>
    <string name="dump_metadata">Dump Metadata [Il2cpp]</string>
    <string name="clear">Clear</string>
    <string name="rebuild_sofile">Don\'t Rebuild SoFile</string>
    <string name="libname_leave_blank_if_wanna_use_default">LibName [leave blank if wanna use default]</string>
</resources>